# cns2026-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: lint.yml
docs/: CORPUS.md  METHODS.md  RESULTS.md
docs/notes/: build-log-2026-06-27.md  corpus-qa-2026-06-27.md  corpus-qa-2026-06-28.md  pdf-dropbox-instructions.md
docs/plans/: 2026-06-27-cns-corpus-foundation.md  2026-06-28-cns-analysis.md
docs/specs/: 2026-06-27-cns-scientometrics-design.md
results/: README.md
results/tables/: cosyne_cns_contrast.csv  keyword_frequencies.csv  network_summary.csv
scripts/: run_all_figures.py  run_contrast.py  run_keyword_trends.py  run_networks.py  run_topics.py
src/cns_scientometrics/: __init__.py  __main__.py  acquire.py  bmc_html.py  corpus.py  http_cache.py  ncbi.py  normalize.py  parse_jats.py  parse_pdf.py  schema.py  sources.py
src/cns_scientometrics/analyze/: __init__.py  contrast.py  embeddings.py  figures.py  keyword_trends.py  keywords_taxonomy.py  networks.py  robustness.py  topics.py
tests/: test_acquire.py  test_bmc_html.py  test_contrast.py  test_corpus.py  test_embeddings.py  test_http_cache.py  test_keyword_trends.py  test_ncbi.py  test_networks.py  test_normalize.py  test_parse_bundle.py  test_parse_jats.py  test_parse_pdf.py  test_robustness.py  test_schema.py  test_sources.py
tests/fixtures/: bmc_article_2009_P1.html  era_a_P173.xml  era_b_bundle_trimmed.xml  era_c_bundle_trimmed.xml
