[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cns-scientometrics"
version = "0.1.0"
description = "Scientometric analysis of CNS/OCNS computational neuroscience meeting abstracts"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Renato Duarte", email = "rcfduarte@gmail.com" }]
dependencies = [
    "httpx>=0.27",
    "lxml>=5",
    "pydantic>=2",
    "pandas>=2",
    "pyarrow>=15",
    "tenacity>=8",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6"]

[tool.hatch.build.targets.wheel]
packages = ["src/cns_scientometrics"]

[tool.pytest.ini_options]
markers = ["network: hits live external APIs (deselect with -m 'not network')"]
addopts = "-m 'not network'"

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["docs", "notebooks", "_archive", "deprecated"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501", "B008", "RUF001", "RUF002", "RUF003"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
